Fix image navigation pane
Signed-off-by: Taylor Smock <tsmock@meta.com>